Establish communication with server via gRPC client services